cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aline-ingress
  namespace: aline
  labels:
    component: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
spec:
  rules:
    - host: api.alinefinancial.com
      http:
        paths:
        - pathType: Prefix
          path: "/api/"
          backend:
            service:
              name: gateway-service
              port: 
                number: 80
    - host: admin.alinefinancial.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: admin-service
              port: 
                number: 80
    - host: member.alinefinancial.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: dashboard-service
              port: 
                number: 80
    - host: alinefinancial.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: landing-service
              port: 
                number: 80
